--- a/TicketMvp/src/main/webapp/resources/css/athlete_information.css
+++ b/TicketMvp/src/main/webapp/resources/css/athlete_information.css
@@ -4,29 +4,44 @@ body {
     background-color: #f8f9fa;
     margin: 0;
     padding: 0;
+    display: flex;
+    align-items: center; /* 수직 가운데 정렬 */
+    justify-content: center; /* 수평 가운데 정렬 */
+    min-height: 100vh; /* 최소 화면 높이에 맞게 설정 */
 }
 
-.athlete-information {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
+main.athlete-information {
+    display: grid;
+    gap: 20px; /* 열 사이의 간격 설정 */
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 20px; /* 그리드 전체의 padding 조정 */
+    max-width: 100%; /* 최대 너비 설정 */
+}
+
+.athlete-top {
+    display: grid;
+    grid-template-columns: auto auto; /* 2개의 열로 나눔 */
+    align-items: flex-start; /* 이미지 상단 정렬 */
 }
 
 .image-layer {
-    flex: 1;
-    text-align: center;
-    max-width: 100%;
-    max-height: 300px;
+    max-height: 300px; /* 이미지 최대 높이 설정 */
+    text-align: center; /* 이미지 중앙 정렬 */
+}
+
+.image-layer img {
+    max-width: 100%; /* 이미지 최대 너비 설정 */
+    height: auto; /* 가로 비율 유지 */
 }
 
 .text-layer {
-    flex: 2;
     padding: 20px;
     background-color: #fff;
-    border: 1px solid #ccc;
     border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    text-align: left; /* 선수 정보를 왼쪽 정렬 */
+    height: 300px; /* 선수 정보 박스의 높이를 이미지와 동일하게 설정합니다. */
 }
 
 h1 {
@@ -42,38 +57,20 @@ p {
 }
 
 .athlete-schedule {
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    padding: 20px;
+    margin-top: 20px; /* 이미지와 선수 정보와의 간격 설정 */
 }
 
-#footer {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 10px 0;
+.athlete-schedule h2 {
+    font-size: 20px;
+    margin: 0;
 }
 
-/* 그리드 스타일 */
-.grid-container {
-    display: grid;
-    grid-template-columns: 100px 1fr;
-    gap: 10px;
+.athlete-schedule ul {
+    list-style-type: none;
+    padding: 0;
 }
 
-.left-box {
-    background-color: #3498db;
-    color: #fff;
-    text-align: center;
-    padding: 10px;
-}
-
-.text {
-    padding: 10px;
+.athlete-schedule li {
+    font-size: 16px;
+    margin: 5px 0;
 }
