--- a/TicketMvp/src/main/webapp/resources/css/main/templates.css
+++ b/TicketMvp/src/main/webapp/resources/css/main/templates.css
@@ -3,9 +3,9 @@
 /* 헤더, 푸터, 사이드 바 전체 윤곽 */
 #container {
 	display: flex;
-	height: auto;									/* 변경 */
-	min-height: 750px;								/* 추가 */
-	min-width: 500px;								/* 추가 */
+	height: auto;									
+	min-height: 750px;								
+	min-width: 500px;								
 	background-color: #f8f9fa;
 }
 
