--- a/TicketMvp/src/main/webapp/resources/css/main/templates.css
+++ b/TicketMvp/src/main/webapp/resources/css/main/templates.css
@@ -70,7 +70,7 @@ body {
 /* 헤더 login status */
 
 .top-header {
-	height: 80px;
+	height: 70px;
 	background-color: #333;
 	position : relative;
 }
@@ -120,11 +120,17 @@ body {
 
 .sidebar .menu li {
 	margin-bottom: 10px;
+	
 }
 
 .sidebar .menu a {
 	color: white;
 	text-decoration: none;
+	
+}
+
+.sidebar ul li a {
+	font-size: 20px;
 }
 
 /* 푸터 스타일 */
