--- a/TicketMvp/src/main/webapp/resources/css/user/userLoginPage.css
+++ b/TicketMvp/src/main/webapp/resources/css/user/userLoginPage.css
@@ -16,6 +16,7 @@ body {
 #main-holder {
   width: 50%;
   height: 70%;
+  min-width:500px;
   display: grid;
   justify-items: center;
   align-items: center;
