--- a/TicketMvp/src/main/webapp/resources/css/ReserveChoose.css
+++ b/TicketMvp/src/main/webapp/resources/css/ReserveChoose.css
@@ -1,6 +1,9 @@
 @charset "UTF-8";
 
-body, html {
+div#content {
+	font-family: 'Arial', sans-serif;
+    background-color: #505050; 
+    color: #f5f5f5; 
     height: 100%;
     margin: 0;
     padding: 0;
@@ -8,19 +11,20 @@ body, html {
 }
 
 .list-group-item {
+	background-color: #444;
+    color: #f5f5f5;
+    border: 1px solid #555;
     margin-top: 10px;
-    border: 1px solid #ddd;
     border-radius: 5px;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
     margin-bottom: 20px;
-    background-color: #fff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .list-group-item:hover {
     transform: scaleX(1.05);
-    background-color: #f5f5f5;
+    background-color: #707070;
 }
 
 .list-group-item.active {
@@ -28,17 +32,13 @@ body, html {
     color: #fff;
 }
 
+
 .list-group-item img.soccer-ticket {
     width: 50px;
 }
 
 .list-group-item .ticket-info {
     font-size: 12px;
-    color: #555;
-}
-
-.list-group-item{
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .ticket-info span.price {
@@ -104,18 +104,50 @@ body, html {
     padding: 20px; 
 }
 
-button#purchase {
-    background-color: #007bff;
+button#purchase, #purchaseConfirm, .btn, .btn-primary, .btn-secondary, .btn-success {
+    background-color: #555;
     color: #fff;
     padding: 10px 20px;
     border: none;
     cursor: pointer;
     border-radius: 5px;
     margin-bottom: 10px;
+    transition: background-color 0.3s ease;
 }
 
-button#purchase:hover {
-    background-color: #0056b3; 
+button#purchase:hover, #purchaseConfirm:hover{
+    background-color: #666;
+    color: #fff; 
+}
+
+.btn-primary {
+    background-color: #007bff;
+    border-color: #007bff;
+}
+
+.btn-primary:hover {
+    background-color: #0056b3;
+    border-color: #0056b3;
+}
+
+.btn-secondary {
+    background-color: #6c757d;
+    border-color: #6c757d;
+}
+
+.btn-secondary:hover {
+    background-color: #5a6268;
+    border-color: #545b62;
+}
+
+.btn-success {
+    background-color: #28a745;
+    border-color: #28a745;
+}
+
+.btn-success:hover {
+    background-color: #218838;
+    border-color: #218838;
 }
 
 .popup {
@@ -147,6 +179,12 @@ img#stadium:hover {
     text-align: center;
 }
 
+#reservationInfoModal .modal-content {
+    font-family: 'Arial', sans-serif;
+    background-color: #505050; 
+    color: #f5f5f5; 
+}
+
 #reservationInfoModal .modal-dialog {
     max-width: 800px;
 }
@@ -156,13 +194,14 @@ img#stadium:hover {
 }
 
 #reservationInfoModal .modal-header {
-    background-color: #007bff;
-    color: white;
+    background-color: #444;
+    color: #fff;
     border: none;
     padding: 15px;
 }
 
 #reservationInfoModal .modal-body {
+    padding: 20px;
     font-size: 18px;
 }
 
@@ -175,15 +214,35 @@ img#stadium:hover {
     margin: 10px 0;
 }
 
-#purchaseConfirm {
-    background-color: #007bff;
-    color: white;
-}
-
-#purchaseConfirm:hover {
-    background-color: #0056b3;
+button#purchase, #purchaseConfirm {
+    background-color: #555;
+    color: #fff;
 }
 
 .hidden-input {
     display: none;
+}
+
+#stadiumMissing {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    font-size: 24px;
+    font-weight: bold;
+    color: #333;
+    background-color: #f4f4f4;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+#stadiumMissing::before {
+    content: "\f05e"; 
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 900;
+    font-size: 48px;
+    margin-right: 10px;
+    color: #f00; 
 }
