--- a/TicketMvp/src/main/webapp/resources/css/ReservePayment.css
+++ b/TicketMvp/src/main/webapp/resources/css/ReservePayment.css
@@ -1,4 +1,43 @@
 @charset "UTF-8";
+
+div#content {
+    font-family: 'Arial', sans-serif;
+    background-color: #505050;
+    color: #f5f5f5;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+div#content .card, div#content .modal-content, div#content .form-control {
+   	background-color: #505050;
+    border-color: #666;
+}
+
+div#content .modal-header, div.card-header {
+    background-color: #007bff; 
+    color: #fff;
+    font-weight: bold;
+}
+
+div#content .form-label, div#content .form-control {
+    background-color: #404040; 
+    color: #f5f5f5;
+    border-color: #666;
+}
+
+div#content .table td, div#content .table th {
+    background-color: #404040;
+    color: #f5f5f5;
+}
+
+div.card-header {
+    background-color: #404040; 
+    color: #f5f5f5; 
+    font-weight: bold;
+}
+
 h1 {
     text-align: center;
 }
@@ -8,12 +47,6 @@ h1 {
     border-radius: 5px;
     margin-bottom: 20px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.card-header {
-    background-color: #007bff;
-    color: #fff;
-    font-weight: bold;
 }
 
 .btn {
@@ -100,4 +133,73 @@ h1 {
     white-space: nowrap; 
     overflow: hidden;
     text-overflow: ellipsis; 
+}
+
+div#content .btn, 
+div#content .btn-primary, 
+div#content .btn-secondary, 
+div#content .btn-success {
+    background-color: #555; 
+    color: #fff; 
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    transition: background-color 0.3s ease;
+}
+
+div#content .btn:hover, 
+div#content .btn-primary:hover, 
+div#content .btn-secondary:hover, 
+div#content .btn-success:hover {
+    background-color: #666; 
+    color: #fff; 
+}
+
+button#purchase, 
+button#purchaseConfirm {
+    background-color: #707070; 
+    color: #f5f5f5; 
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+button#purchase:hover, 
+button#purchaseConfirm:hover {
+    background-color: #606060; 
+    color: #ffffff; 
+}
+
+.modal-content {
+    background-color: #505050; 
+    color: #f5f5f5; 
+    border-color: #666; 
+}
+
+.modal-header, .modal-footer {
+    background-color: #404040; 
+    color: #fff; 
+    border: none; 
+}
+
+.modal-header .close {
+    color: #fff; 
+}
+
+.modal-body {
+    background-color: #505050; 
+    color: #f5f5f5; 
+}
+
+.modal-footer .btn-primary,
+.modal-footer .btn-secondary {
+    background-color: #555; 
+    color: #fff;
+    border-color: #555; 
+}
+
+.modal-footer .btn-primary:hover,
+.modal-footer .btn-secondary:hover {
+    background-color: #666; 
+    color: #fff; 
 }
