--- a/TicketMvp/src/main/webapp/resources/css/athlete_matches.css
+++ b/TicketMvp/src/main/webapp/resources/css/athlete_matches.css
@@ -1,61 +1,50 @@
-/* athlete-information.css */
 body {
     font-family: Arial, sans-serif;
     background-color: #f8f9fa;
     margin: 0;
     padding: 0;
     display: flex;
-    align-items: center; /* 수직 가운데 정렬 */
-    justify-content: center; /* 수평 가운데 정렬 */
-    min-height: 100vh; /* 최소 화면 높이에 맞게 설정 */
+    align-items: center; 
+    justify-content: center; 
+    min-height: 100vh; 
 }
 
 main.matches-information {
     display: grid;
-    gap: 120px; /* 열 사이의 간격 설정 */
+    gap: 120px; 
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    padding: 20px; /* 그리드 전체의 padding 조정 */
-    max-width: 100%; /* 최대 너비 설정 */
+    padding: 20px; 
+    max-width: 100%; 
     max-height: 100%;
 }
 
 .athlete-top {
     display: grid;
-    grid-template-columns: 1fr 1fr; /* 2개의 열로 나눔 */
-    align-items: center; /* 이미지 상단 정렬 */
+    grid-template-columns: 1fr 1fr; 
+    align-items: center; 
 }
 
 .image-layer {
-    width: 50%; /* 이미지의 가로 크기를 화면 너비의 절반으로 설정합니다. */
-    max-height: 300px; /* 이미지의 최대 높이 설정 */
+    width: 50%; 
+    max-height: 300px; 
     text-align: center;
 }
 
-.image-layer img {
-    /* max-width: 100%; 이미지 최대 너비 설정
-    max-height: 100%; 이미지를 그리드에 맞게 확장합니다.
-    height: auto; 가로 비율 유지 */
-    
-    max-width: 100%; /* 이미지를 최대 너비로 설정하여 가로 비율을 유지합니다. */
-    height: auto; /* 이미지 높이를 자동으로 조절하여 세로 비율을 유지합니다. */
-    display: inline-block; /* 인라인 블록 요소로 설정하여 수직 가운데 정렬을 쉽게 할 수 있습니다. */
-    vertical-align: middle; /* 수직 가운데 정렬을 활성화합니다. */
+.image-layer img {   
+    max-width: 100%; 
+    height: auto; 
+    display: inline-block; 
+    vertical-align: middle; 
 }
 
 .text-layer {
-/*     padding: 20px;
+    padding: 20px;
     background-color: #fff;
     border-radius: 5px;
-    text-align: left; 선수 정보를 왼쪽 정렬
-    height: 300px; 선수 정보 박스의 높이를 이미지와 동일하게 설정합니다. */
-    
-     padding: 20px;
-    background-color: #fff;
-    border-radius: 5px;
-    text-align: left; /* 선수 정보를 가운데 정렬로 변경 */
-    height: auto; /* 선수 정보 박스의 높이를 이미지와 동일하게 설정합니다. */
+    text-align: left; 
+    height: auto; 
 }
 
 h1 {
@@ -71,7 +60,7 @@ p {
 }
 
 .matches-schedule {
-    margin-top: 20px; /* 이미지와 선수 정보와의 간격 설정 */
+    margin-top: 20px; 
 }
 
 .matches-schedule h2 {
@@ -98,14 +87,14 @@ p {
 }
 
 .grid-item {
-    padding: 20px; /* 그리드 아이템의 패딩을 늘립니다. */
+    padding: 20px; 
     background-color: #fff;
     border-radius: 5px;
     text-align: left;
 }
 
 .match-info {
-    font-size: 18px; /* 글꼴 크기를 더 크게 설정합니다. */
+    font-size: 18px; 
     margin: 0;
 }
 
@@ -116,6 +105,6 @@ p {
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    font-size: 16px; /* 결제 버튼의 글꼴 크기를 설정합니다. */
-    margin-left: 60px; /* 버튼을 오른쪽으로 이동시키려면 왼쪽에 간격을 추가합니다. */
+    font-size: 16px; 
+    margin-left: 60px; 
 }
