--- a/TicketMvp/src/main/webapp/resources/css/main/main.css
+++ b/TicketMvp/src/main/webapp/resources/css/main/main.css
@@ -4,7 +4,6 @@ body {
 	font-size: 1rem;
 	font-weight: 400;
 	line-height: 1.5;
-	color: #858796;
 	text-align: left;
 	background-color: #fff;
 	border : none;
@@ -16,58 +15,58 @@ body {
 	flex-direction: column;
 }
 
-#body-content {
-	text-align: center;
-	// padding-bottom: 100px; /* footer의 높이 조절 */
-	// padding: 100px; /* 푸터와 콘텐츠 사이 여백 조절 */
-}
 
 /* 메인 콘텐츠 스타일 */
-.main-content {
+/* .main-content {
 	display: flex;
 	justify-content: space-between;
 }
 
 .flex-container {
     display: flex;
-}
+} */
 
 .image-grid {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 10px;
-    padding: 20px;
-    margin-top: 40px;
+    /* grid-template-columns: repeat(6, 1fr); */
+    grid-template-columns: repeat(6, calc(16.666% - 8px));
+    gap: 20px;
+    padding: 10px;
+    margin-top: 20px;
     justify-items: stretch;
+    align-items: center;
 }
 
 /* 이미지 아이템 스타일 */
 .image-item {
+	width: 100%;
     border: 1px solid #ddd;
     overflow: hidden;
     border-radius: 10px;
-    text-align: center;
+    /* text-align: center; */
+    aspect-ratio: 1 / 1.5; /* 가로 및 세로 비율을 1:1로 설정 */
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100%;
+   /*  height: 100%; */
 }
 
 .image-item img {
-    width: 80%;
-    height: 100%;
+   /*  width: 80%;
+    height: 100%; */
     max-width: 100%;
     max-height: 100%;
     display: block;
+    object-fit: cover; /* 이미지가 자동으로 비율 유지하며 가득 차도록 설정 */
 }
 
 .image-item:hover img {
-    transform: scale(1.05);
+    transform: scale(1.2);
 }
 
 /* 쇼핑몰 화면 스타일 */
 .shopping-area {
 	flex: 1;
 	padding: 20px;
-	background-color: #fff;
+	background-color: #505050;
 }
