--- a/TicketMvp/src/main/webapp/resources/css/admin/admin.css
+++ b/TicketMvp/src/main/webapp/resources/css/admin/admin.css
@@ -267,7 +267,7 @@ a:hover {
 
 /* 링크들 버튼 느낌으로 */
 
-#actionButtons a {
+#actionButtons a ,#clubRegi ,#ticketsubmit ,#submitAthlete ,#athleteRegi ,#clubMo ,#clubModi ,#tickeModi ,#matchsubmit{
     display: inline-block;
     padding: 10px 20px;
     font-size: 16px;
@@ -301,6 +301,30 @@ a:hover {
 #actionButtons .btn-danger:focus {
     background-color: #dc3545;
     border-color: #dc3545;
+    border-radius: 5px; /* 둥글게 만들기 */
+    padding: 8px 15px; /* 내용과의 간격 조절 */
+    color: #fff; /* 텍스트 색상을 흰색으로 설정 */
+    font-weight: bold; /* 텍스트 굵게 설정 */
+}
+
+
+
+#dataTable .btn-dangerGRE,
+#dataTable .btn-dangerGRE:hover,
+#dataTable .btn-dangerGRE:focus {
+    background-color: #89c5c5;
+    border-color: #89c5c5;
+    border-radius: 5px; /* 둥글게 만들기 */
+    padding: 8px 15px; /* 내용과의 간격 조절 */
+    color: #fff; /* 텍스트 색상을 흰색으로 설정 */
+    font-weight: bold; /* 텍스트 굵게 설정 */
+}
+
+#actionButtons .btn-dangerGRE,
+#actionButtons .btn-dangerGRE:hover,
+#actionButtons .btn-dangerGRE:focus {
+    background-color: #89c5c5;
+    border-color: #89c5c5;
     border-radius: 5px; /* 둥글게 만들기 */
     padding: 8px 15px; /* 내용과의 간격 조절 */
     color: #fff; /* 텍스트 색상을 흰색으로 설정 */
