--- a/TicketMvp/src/main/webapp/resources/css/main/templates.css
+++ b/TicketMvp/src/main/webapp/resources/css/main/templates.css
@@ -1,12 +1,18 @@
 /* templates. css */
 
 /* 헤더, 푸터, 사이드 바 전체 윤곽 */
+body{
+	margin:0;
+	padding:0;
+}
+
+
 #container {
 	display: flex;
 	height: auto;									
-	min-height: 750px;								
+/* 	min-height: 750px; */								
 	min-width: 500px;								
-	background-color: #f8f9fa;
+	background-color: #505050;
 }
 
 #container>#sidebar {
@@ -18,7 +24,9 @@
 
 #container>#content {
 	flex: 9;
+	height: 100%;
 	padding : 15px;
+	background: #333;
 }
 
 iframe {
@@ -27,37 +35,13 @@ iframe {
 	border: none;
 }
 
-
-/*메인페이지에 있는 전체 <div>코드입니다. 혹시 몰라서 넣었어요!*/
-/* html {
-    height: 100%;
-}
-body {
-    min-height: 100%;
-}
-
-body {
-	margin: 0;
-	font-size: 1rem;
-	font-weight: 400;
-	line-height: 1.5;
-	/* color: #858796; */
-	text-align: left;
-	background-color: #fff;
-	border : none;
-}
-
 #body-wrapper {
-	flex-grow: 1; 푸터 위의 콘텐츠가 화면을 채울 수 있도록 설정
+	flex-grow: 1; /* 푸터 위의 콘텐츠가 화면을 채울 수 있도록 설정 */
 	display: flex;
 	flex-direction: column;
 }
 
-#body-content {
-	text-align: center;
-	padding-bottom: 100px; footer의 높이 조절
-	padding: 100px; 푸터와 콘텐츠 사이 여백 조절
-} */
+
 
 #header, .login-header, #footer {
     width: 100%; /* 헤더, 푸터는 화면 너비에 맞게 설정 */
@@ -76,10 +60,17 @@ body {
 
 .top-header .header-links {
 	position: absolute;
-	top : 50%;
+	top : 30%;
 	right : 2%;
 	font-size : 20px;
 	color: white;
+}
+
+div#smallrogo {
+	position:absolute;
+	left:50%;
+	top:50%;
+	transform: translate(-50%, -50%);
 }
 
 .top-header .header-links a {
@@ -102,6 +93,32 @@ body {
     height: auto;
 }
 
+.logo-banner-header .logo {
+	position:relative;
+	text-align: center
+}
+
+div#slogan1 {
+	position:absolute;
+	color:#fff;
+	top: 30%;
+  	left: 70%;
+  	transform: translate(-50%, -50%);
+  	font-size:20px;
+  	display: inline-block; width: 200px; white-space: nowrap;
+}
+
+div#slogan2 {
+	position:absolute;
+	color:#fff;
+	top: 50%;
+  	left: 60%;
+  	transform: translate(-50%, -50%);
+  	font-size:70px;
+  	display: inline-block; width: 200px; white-space: nowrap;
+}
+
+
 /*사이드 바 */
 
 .sidebar {
@@ -113,20 +130,22 @@ body {
 
 .sidebar .menu {
 	padding-bottom: 10px;
-	padding-top: 10px;
+	padding-top: 60px;
 	list-style: none;
 }
 
 .sidebar .menu li {
-	margin-bottom: 10px;
+	margin-bottom: 30px;
 	
 }
 
-.sidebar .menu a {
+.menu a {
 	color: white;
 	text-decoration: none;
-	font-size: 17px; /* 수정된 부분 */
-	
+	font-size: 20px;
+	display: block;
+	text-align: center; /* 텍스트를 가운데 정렬합니다. */
+	white-space: nowrap;
 }
 
 .sidebar ul li a {
@@ -134,52 +153,65 @@ body {
 }
 
 /* 푸터 스타일 */
-
-.footer {
-	width: 100%;
-	background-color: #333;
-	color: white;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	bottom: 0; left: 0;
-	height: 150px;
+#footer {
+    width: 100%;
+    background-color: #333;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    bottom: 0;
+    left: 0;
+    height: 150px;
 }
 
-.footer_inner {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
+#footer_inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
 }
 
-.footer_links ul {
-	list-style: none;
-	padding: 0;
-	display: flex;
-	margin-right: 20px; 
+#footer_links {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.footer_links li {
-	margin-right: 20px;
+#footer_links ul {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.footer a {
-	color: white;
-	text-decoration: none;
+#footer_links li {
+    margin-right: 20px;
 }
 
-.footer_logo {
-	font-weight: bold;
-	font-size: 24px;
+#footer a {
+    color: white;
+    text-decoration: none;
+    font-size: 15px;
 }
 
-.footer_inner .footer_team7 {
-	position : right;
+#footer_logo {
+  font-weight: bold;
+    font-size: 24px; /* 원하는 폰트 크기로 조정 */
+    margin-left: auto;
+    margin-right: auto; /* 가운데 정렬을 위해 추가 */
 }
 
-.footer_inner .footer_team7 p {
-	margin:2px;
+#footer_inner #footer_team7 {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 }
 
+#footer_inner #footer_team7 p {
+    margin: 2px;
+}
 
 
