--- a/TicketMvp/src/main/webapp/resources/css/user/userMyCoupon.css
+++ b/TicketMvp/src/main/webapp/resources/css/user/userMyCoupon.css
@@ -10,13 +10,13 @@ table {
 }
 
 th {
-	text-align: left;
+	text-align: center;
 }
 
 thead {
 	font-weight: bold;
 	color: #fff;
-	background: #333;
+	background: #505050;
 }
 
 td, th {
@@ -31,6 +31,26 @@ td {
 
 a {
 	color: #73685d;
+}
+
+#couponin {
+	padding-top:10px;
+	padding-bottom:10px;
+}
+
+#in1, #in2, #in3, #in4 {
+	text-align:center;
+	border-top:none;
+	background : #505050;
+	width:100px;
+	font-size:20px;
+}
+
+input[type="submit"]{
+	background:#DBE0CD;
+	width:70px;
+	height:30px;
+	border-radius:10px;
 }
 
 @media all and (max-width: 768px) {
