--- a/TicketMvp/src/main/webapp/resources/css/athlete_information.css
+++ b/TicketMvp/src/main/webapp/resources/css/athlete_information.css
@@ -11,10 +11,20 @@ body {
 }
 
 .athlete-information {
-    display: grid;
-    gap: 120px; /* 열 사이의 간격 설정 */
+ /* 그레이 배경
+ 	display: grid;
+    gap: 120px; 열 사이의 간격 설정
     background-color: #505050;
     border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 80px; 그리드 전체의 padding 조정
+    max-width: 100%; 최대 너비 설정
+    max-height: 100%; */
+    
+    display: grid;
+    gap: 120px; /* 열 사이의 간격 설정 */
+    background-color: white;
+    border-radius: 15px;
     /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
     padding: 80px; /* 그리드 전체의 padding 조정 */
     max-width: 100%; /* 최대 너비 설정 */
@@ -76,6 +86,8 @@ p {
 .athlete-schedule {
     margin-top: 20px; /* 이미지와 선수 정보와의 간격 설정 */
 	text-align: center; /* 텍스트 가운데 정렬 */
+	border: 5px solid black; /* 검은색 테두리 추가 */
+    padding: 30px; /* 테두리 안에 여백 추가 */
 }
 
 .athlete-schedule h2 {
@@ -126,24 +138,32 @@ p {
 }
 
 #match-name{
-	color: gainsboro;
+	/* color: gainsboro; */
+	color: black;
 }
 
 .match-info {
-    /* font-size: 22px; 글꼴 크기를 더 크게 설정합니다.
-    margin: 0; */
-    display: flex;
+
+/*     display: flex;
     align-items: center;
-    justify-content: space-between; /* 좌우 정렬 추가 */
+    justify-content: space-between; 좌우 정렬 추가
     border: 5px solid #ddd;
     border-radius: 5px;
     padding: 10px;
-    color: gainsboro;
+    color: gainsboro; */
+    
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border: 3px solid black;
+    border-radius: 5px;
+    padding: 10px;
+    color: black;
 }
 
 .payment-button {
-    background-color: white;
-    color: black;
+    background-color: black;
+    color: white;
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
@@ -244,7 +264,12 @@ p {
 .athlete-top {
     display: grid;
     grid-template-columns: 1fr 2fr; /* 2개의 열로 나눔 */
-    align-items: center; /* 이미지 상단 정렬 */
+    align-items: start; /* 이미지 상단 정렬 */
+}
+
+.gird-left,
+.gird-right {
+    align-self: start; /* 위쪽을 정렬 */
 }
 
 .image-layer {
@@ -264,7 +289,7 @@ p {
 
 .text-layer {
     padding: 20px;
-    background-color: #ddd;
+    background-color: white;
     border-radius: 10px;
     text-align: left;
     height: auto;
