--- a/TicketMvp/src/main/webapp/resources/css/main/templates.css
+++ b/TicketMvp/src/main/webapp/resources/css/main/templates.css
@@ -4,7 +4,7 @@
 #container {
 	display: flex;
 	height: auto;									
-	min-height: 750px;								
+/* 	min-height: 750px; */								
 	min-width: 500px;								
 	background-color: #505050;
 }
@@ -12,7 +12,7 @@
 #container>#sidebar {
 	flex: 1;
    	background-color:#333;
-	max-height: 1000px;
+	max-height: 100%;
 	min-width: 200px;
 }
 
@@ -20,6 +20,7 @@
 	flex: 9;
 	height: 100%;
 	padding : 15px;
+	background: #333;
 }
 
 iframe {
@@ -84,26 +85,28 @@ iframe {
 .sidebar {
 	background-color: #333;
 	color: white;
-	width: 150px;
+/* 	width: 150px;  삳제 */
 	padding: 20px;
 }
 
 .sidebar .menu {
 	padding-bottom: 10px;
-	padding-top: 10px;
+	padding-top: 60px;
 	list-style: none;
 }
 
 .sidebar .menu li {
-	margin-bottom: 10px;
+	margin-bottom: 30px;
 	
 }
 
-.sidebar .menu a {
+.menu a {
 	color: white;
 	text-decoration: none;
-	font-size: 17px; /* 수정된 부분 */
-	
+	font-size: 20px;
+	display: block;
+	text-align: center; /* 텍스트를 가운데 정렬합니다. */
+	white-space: nowrap;
 }
 
 .sidebar ul li a {
