--- a/TicketMvp/src/main/webapp/resources/css/main/main.css
+++ b/TicketMvp/src/main/webapp/resources/css/main/main.css
@@ -3,7 +3,7 @@
 .image-grid {
     display: grid;
     /* grid-template-columns: repeat(6, 1fr); */
-    grid-template-columns: repeat(6, calc(16.666% - 8px));
+    grid-template-columns: repeat(4,1fr);
     gap: 20px;
     padding: 10px;
     margin-top: 20px;
